fixinng whitespace at bottom

--- a/voniel-brown-portfolio/src/App.css
+++ b/voniel-brown-portfolio/src/App.css
@@ -1,5 +1,6 @@
 .App,
 .darkMode {
+  overflow-y: scroll;
   text-align: center;
   width: 100vw;
   position: relative;
